implement thermostat and bonus schedules

--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
     <title>Thermostat</title>
 </head>
 <body>
+    <!-- jonathon is visual -->
+    <input type="number" value="17"/>
     <script src="./index.js"></script>
 </body>
 </html>
